<resources>
    <string name="app_name">AddressFinder</string>
    <string name="tvAppName">Address Finder</string>
    <!-- Main activity -->
    <string name="btFindAddress">Find Address</string>
    <string name="btBookmarks">Bookmarks</string>
    <!-- Find Address activity -->
    <string name="tvFindAddress">Find Address</string>
    <string name="etAddress">Address</string>
    <string name="etCity">City</string>
    <string name="etState">State</string>
    <string name="etPostal">Postal</string>
    <string name="btSearch">Search</string>
    <string name="emptyEditTextField">This field cannot be empty</string>
    <!--Bookmarks activity-->
    <string name="tvAddress">Address:</string>
    <string name="tvCity">City:</string>
    <string name="tvState">State:</string>
    <string name="tvPostal">Postal:</string>
    <string name="tvBookmarks">Bookmarks</string>
    <!--Maps Activity -->
    <string name="tvViewAddress">View address</string>
    <!-- dialogs -->
    <string name="deleteBookmark">Are you sure you want to delete this bookmark?</string>
    <!-- Notify user -->
    <string name="checkYourConnection">Please check your network connection</string>
    <string name="noResults">We could not find this address. Would you like to search again?</string>
    <string name="alreadySavedBookmark">You already have this bookmark saved</string>
    <string name="problemGettingData">There was a problem retrieving the data please try again.</string>
    <string name="problemSendingData">There was a problem sending the data please try again.</string>
    <string name="problemDeletingData">There was a problem deleting the data please try again.</string>
    <string name="exceptionMessageCreatingBookmark">Failed to create bookmark.</string>
    <string name="exceptionMessageGettingData">Failed to load bookmark data.</string>
    <string name="exceptionMessageDeletingData">Failed to delete bookmark data.</string>

</resources>
