<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.praktikant.addressfinder.activities.SearchActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvSearchAddress"
        android:layout_width="@dimen/tvTitleWidth"
        android:layout_height="@dimen/tvTitleHeight"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/tvTitleMarginRight"
        android:layout_marginLeft="@dimen/tvTitleMarginLeft"
        android:layout_marginRight="@dimen/tvTitleMarginRight"
        android:layout_marginStart="@dimen/tvTitleMarginLeft"
        android:layout_marginTop="@dimen/tvTitleMarginTop"
        android:text="@string/tvFindAddress"
        android:textAlignment="center"
        android:textSize="@dimen/tvTitleTextSize"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSearch"
        android:layout_width="@dimen/btNavigation"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btSearchMarginBottom"
        android:layout_marginEnd="@dimen/globalMarginEnd"
        android:layout_marginLeft="@dimen/globalMarginLeft"
        android:layout_marginRight="@dimen/globalMarginRight"
        android:layout_marginStart="@dimen/globalMarginStart"
        android:text="@string/btSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarSearching"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/progressBarWidth"
        android:layout_height="@dimen/progressBarHeight"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llInputTextWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etAddress"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etCity"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/etState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etState"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPostal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etPostal"
            android:inputType="textPersonName" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
