<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:cardElevation="@dimen/cardCornerRadius"
    app:cardUseCompatPadding="true"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddressListItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="@dimen/tvTitleCardViewMarginStart"
            android:layout_marginTop="@dimen/tvTitleCardViewMarginTop"
            android:text="@string/tvAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCityListItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAddressListItemTitle"
            android:layout_marginLeft="@dimen/tvTitleCardViewMarginLeft"
            android:layout_marginStart="@dimen/tvTitleCardViewMarginStart"
            android:layout_marginTop="@dimen/tvTitleCardViewMarginTop"
            android:text="@string/tvCity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressListItemTitle" />

        <TextView
            android:id="@+id/tvStateListItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCityListItemTitle"
            android:layout_marginLeft="@dimen/tvTitleCardViewMarginLeft"
            android:layout_marginStart="@dimen/tvTitleCardViewMarginStart"
            android:layout_marginTop="@dimen/tvTitleCardViewMarginTop"
            android:text="@string/tvState"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCityListItemTitle" />

        <TextView
            android:id="@+id/tvPostalListItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvStateListItemTitle"
            android:layout_marginLeft="@dimen/tvTitleCardViewMarginLeft"
            android:layout_marginStart="@dimen/tvTitleCardViewMarginStart"
            android:layout_marginTop="@dimen/tvTitleCardViewMarginTop"
            android:text="@string/tvPostal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStateListItemTitle"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/tvAddressListItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/tvValueCardViewMarginEnd"
            android:layout_marginLeft="@dimen/tvValueCardViewMarginLeft"
            android:layout_marginRight="@dimen/tvValueCardViewMarginRight"
            android:layout_marginStart="@dimen/tvValueCardViewMarginStart"
            android:layout_marginTop="@dimen/tvValueCardViewMarginTop"
            android:layout_toEndOf="@+id/tvAddressListItemTitle"
            android:layout_toRightOf="@+id/tvAddressListItemTitle"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:marqueeRepeatLimit="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="Text View"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/tvAddressListItemTitle"
            app:layout_constraintRight_toLeftOf="@+id/btDelete"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCityListItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvCityListItemTitle"
            android:layout_alignBottom="@+id/tvCityListItemTitle"
            android:layout_marginEnd="@dimen/tvValueCardViewMarginEnd"
            android:layout_marginLeft="@dimen/tvValueCardViewMarginLeft"
            android:layout_marginRight="@dimen/tvValueCardViewMarginRight"
            android:layout_marginStart="@dimen/tvValueCardViewMarginStart"
            android:layout_marginTop="@dimen/tvValueCardViewMarginTop"
            android:layout_toEndOf="@+id/tvCityListItemTitle"
            android:layout_toRightOf="@+id/tvCityListItemTitle"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:marqueeRepeatLimit="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/tvCityListItemTitle"
            app:layout_constraintRight_toLeftOf="@+id/btDelete"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressListItem" />

        <TextView
            android:id="@+id/tvStateListItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvStateListItemTitle"
            android:layout_alignBottom="@+id/tvStateListItemTitle"
            android:layout_marginEnd="@dimen/tvValueCardViewMarginEnd"
            android:layout_marginLeft="@dimen/tvValueCardViewMarginLeft"
            android:layout_marginRight="@dimen/tvValueCardViewMarginRight"
            android:layout_marginStart="@dimen/tvValueCardViewMarginStart"
            android:layout_marginTop="@dimen/tvValueCardViewMarginTop"
            android:layout_toEndOf="@+id/tvStateListItemTitle"
            android:layout_toRightOf="@+id/tvStateListItemTitle"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:marqueeRepeatLimit="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="TextView"
            app:layout_constraintLeft_toRightOf="@+id/tvStateListItemTitle"
            app:layout_constraintRight_toLeftOf="@+id/btShowOnMap"
            app:layout_constraintTop_toBottomOf="@+id/tvCityListItem" />

        <TextView
            android:id="@+id/tvPostalListItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStateListItem"
            android:layout_marginEnd="@dimen/tvValueCardViewMarginEnd"
            android:layout_marginLeft="@dimen/tvValueCardViewMarginLeft"
            android:layout_marginRight="@dimen/tvValueCardViewMarginRight"
            android:layout_marginStart="@dimen/tvValueCardViewMarginStart"
            android:layout_marginTop="@dimen/tvValueCardViewMarginTop"
            android:layout_toEndOf="@+id/tvPostalListItemTitle"
            android:layout_toRightOf="@+id/tvPostalListItemTitle"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:marqueeRepeatLimit="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/tvPostalListItemTitle"
            app:layout_constraintRight_toLeftOf="@+id/btShowOnMap"
            app:layout_constraintTop_toBottomOf="@+id/tvStateListItem" />

        <ImageButton
            android:id="@+id/btDelete"
            android:layout_width="@dimen/btImageCardViewWidth"
            android:layout_height="@dimen/btImageCardViewHeight"
            android:layout_marginTop="@dimen/btImageCardViewMarginParentTop"
            android:src="@mipmap/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/tvCityListItem"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/btShowOnMap"
            app:layout_constraintRight_toRightOf="@+id/btShowOnMap"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btShowOnMap"
            android:layout_width="@dimen/btImageCardViewWidth"
            android:layout_height="@dimen/btImageCardViewHeight"
            android:layout_marginBottom="@dimen/btImageCardViewMarginBottom"
            android:layout_marginEnd="@dimen/btImageCardViewMarginEnd"
            android:layout_marginRight="@dimen/btImageCardViewMarginRight"
            android:layout_marginTop="@dimen/btImageCardViewMarginTop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btDelete"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@mipmap/ic_arrow" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>